--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
           <ul class="navigation-list list">
             <li>
-              <a class="navigation-item link" href="./index.html">Studio</a>
+              <a class="navigation-item link current" href="./index.html">Studio</a>
             </li>
             <li>
               <a class="navigation-item link" href="./portfolio.html">Portfolio</a>
@@ -55,7 +55,7 @@
         <div class="container">
           <h1 class="hero-header">Effective Solutions for Your Business</h1>
 
-          <button class="hero-button button" type="button">Order Service</button>
+          <button class="hero-button button" data-modal-open type="button">Order Service</button>
         </div>
       </section>
 
@@ -64,24 +64,44 @@
           <h2 class="visually-hidden">Features</h2>
           <ul class="features-list list">
             <li class="feature-item">
+              <div class="feature-item-image">
+                <svg width="64" height="64" class="feature-item-icon">
+                  <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="features-item-header">Strategy</h3>
               <p class="features-item-description">
                 Our goal is to identify the business problem to walk away with the perfect and creative solution.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-image">
+                <svg width="64" height="64" class="feature-item-icon">
+                  <use href="./images/icons/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="features-item-header">Punctuality</h3>
               <p class="features-item-description">
                 Bring the key message to the brand's audience for the best price within the shortest possible time.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-image">
+                <svg width="64" height="64" class="feature-item-icon">
+                  <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="features-item-header">Diligence</h3>
               <p class="features-item-description">
                 Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-item-image">
+                <svg width="64" height="64" class="feature-item-icon">
+                  <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="features-item-header">Technologies</h3>
               <p class="features-item-description">
                 Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -119,6 +139,28 @@
               <div class="list-team-item-info">
                 <h3 class="team-list-item-header">Mark Guerrero</h3>
                 <p class="team-list-item-description">Product Designer</p>
+                <div class="team-list-item-socials">
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
@@ -126,6 +168,28 @@
               <div class="list-team-item-info">
                 <h3 class="team-list-item-header">Tom Ford</h3>
                 <p class="team-list-item-description">Frontend Developer</p>
+                <div class="team-list-item-socials">
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
@@ -133,6 +197,28 @@
               <div class="list-team-item-info">
                 <h3 class="team-list-item-header">Camila Garcia</h3>
                 <p class="team-list-item-description">Marketing</p>
+                <div class="team-list-item-socials">
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <li class="team-list-item">
@@ -140,7 +226,80 @@
               <div class="list-team-item-info">
                 <h3 class="team-list-item-header">Daniel Wilson</h3>
                 <p class="team-list-item-description">UI Designer</p>
+                <div class="team-list-item-socials">
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="#" class="team-list-item-social-link link">
+                    <svg width="16" height="16" class="team-list-item-social-icon">
+                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section-customers">
+        <div class="container">
+          <h2 class="customer-header">Customers</h2>
+
+          <ul class="customers-list list">
+            <li class="customers-list-item">
+              <a href="#" class="customers-list-item-link">
+                <svg class="customers-list-item-icon" width="104" height="56">
+                  <use href="../images/icons/sprite.svg#icon-customer-1-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="#" class="customers-list-item-link">
+                <svg class="customers-list-item-icon" width="104" height="56">
+                  <use href="../images/icons/sprite.svg#icon-customer-2-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="#" class="customers-list-item-link">
+                <svg class="customers-list-item-icon" width="104" height="56">
+                  <use href="../images/icons/sprite.svg#icon-customer-3-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="#" class="customers-list-item-link">
+                <svg class="customers-list-item-icon" width="104" height="56">
+                  <use href="../images/icons/sprite.svg#icon-customer-4-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="#" class="customers-list-item-link">
+                <svg class="customers-list-item-icon" width="104" height="56">
+                  <use href="../images/icons/sprite.svg#icon-customer-5-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-list-item">
+              <a href="#" class="customers-list-item-link">
+                <svg class="customers-list-item-icon" width="104" height="56">
+                  <use href="../images/icons/sprite.svg#icon-customer-6-logo"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -148,13 +307,62 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo link" href="./index.html">Web<span class="logo-end">Studio</span> </a>
+      <div class="footer-container container">
+        <div class="footer-company-info">
+          <a class="logo link" href="./index.html">Web<span class="logo-end">Studio</span> </a>
 
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-socials">
+          <h2 class="footer-socials-header">Social media</h2>
+
+          <ul class="footer-socials-list list">
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link link">
+                <svg width="24" height="24" class="footer-socials-icon">
+                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link link">
+                <svg width="24" height="24" class="footer-socials-icon">
+                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link link">
+                <svg width="24" height="24" class="footer-socials-icon">
+                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link link">
+                <svg width="24" height="24" class="footer-socials-icon">
+                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
+
+    <div class="modal-overlay is-hidden" data-modal>
+      <div class="modal-window">
+        <button data-modal-close class="modal-close-button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons/sprite.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
