--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
               <a class="navigation-item link" href="./index.html">Studio</a>
             </li>
             <li>
-              <a class="navigation-item link" href="./portfolio.html">Portfolio</a>
+              <a class="navigation-item link current" href="./portfolio.html">Portfolio</a>
             </li>
             <li>
               <a class="navigation-item link" href="">Contacts</a>
@@ -76,8 +76,14 @@
 
           <ul class="project-cards list">
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-1.jpg" width="360" height="300" alt="Banking App Interface Concept" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-1.jpg" width="360" height="300" alt="Banking App Interface Concept" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Banking App Interface Concept</h2>
                   <p class="project-description">App</p>
@@ -85,8 +91,14 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-2.jpg" width="360" height="300" alt="Cashless Payment" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-2.jpg" width="360" height="300" alt="Cashless Payment" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Cashless Payment</h2>
                   <p class="project-description">Marketing</p>
@@ -94,8 +106,14 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-3.jpg" width="360" height="300" alt="Meditation App" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-3.jpg" width="360" height="300" alt="Meditation App" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Meditation App</h2>
                   <p class="project-description">App</p>
@@ -103,8 +121,14 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-4.jpg" width="360" height="300" alt="Taxi Service" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-4.jpg" width="360" height="300" alt="Taxi Service" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Taxi Service</h2>
                   <p class="project-description">Marketing</p>
@@ -112,8 +136,14 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-5.jpg" width="360" height="300" alt="Screen Illustrations" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-5.jpg" width="360" height="300" alt="Screen Illustrations" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Screen Illustrations</h2>
                   <p class="project-description">Design</p>
@@ -121,8 +151,14 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-6.jpg" width="360" height="300" alt="Online Courses" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-6.jpg" width="360" height="300" alt="Online Courses" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Online Courses</h2>
                   <p class="project-description">Marketing</p>
@@ -130,8 +166,14 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-7.jpg" width="360" height="300" alt="Instagram Stories Concept" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-7.jpg" width="360" height="300" alt="Instagram Stories Concept" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Instagram Stories Concept</h2>
                   <p class="project-description">Design</p>
@@ -139,8 +181,14 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-8.jpg" width="360" height="300" alt="Organic Food" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-8.jpg" width="360" height="300" alt="Organic Food" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Organic Food</h2>
                   <p class="project-description">Web Site</p>
@@ -148,8 +196,14 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html"
-                ><img src="./images/projects/img-9.jpg" width="360" height="300" alt="Fresh Coffee" />
+              <a class="link" href="./portfolio.html">
+                <div class="project-cards-image-box">
+                  <img src="./images/projects/img-9.jpg" width="360" height="300" alt="Fresh Coffee" />
+                  <div class="project-overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
+                    Fruit Ecommerce App · Cloud Storage App
+                  </div>
+                </div>
                 <div class="project-info">
                   <h2 class="project-header">Fresh Coffee</h2>
                   <p class="project-description">Web Site</p>
@@ -162,12 +216,49 @@
     </main>
 
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo link" href="./index.html">Web<span class="logo-end">Studio</span> </a>
+      <div class="footer-container container">
+        <div class="footer-company-info">
+          <a class="logo link" href="./index.html">Web<span class="logo-end">Studio</span> </a>
 
-        <p class="footer-description">
-          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+          <p class="footer-description">
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div class="footer-socials">
+          <h2 class="footer-socials-header">Social media</h2>
+
+          <ul class="footer-socials-list list">
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link link">
+                <svg width="24" height="24" class="footer-socials-icon">
+                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link link">
+                <svg width="24" height="24" class="footer-socials-icon">
+                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link link">
+                <svg width="24" height="24" class="footer-socials-icon">
+                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-socials-item">
+              <a href="" class="footer-socials-link link">
+                <svg width="24" height="24" class="footer-socials-icon">
+                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
