fixed customer images paths

--- a/index.html
+++ b/index.html
@@ -269,35 +269,35 @@
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="../images/icons/sprite.svg#icon-customer-2-logo"></use>
+                  <use href="./images/icons/sprite.svg#icon-customer-2-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="../images/icons/sprite.svg#icon-customer-3-logo"></use>
+                  <use href="./images/icons/sprite.svg#icon-customer-3-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="../images/icons/sprite.svg#icon-customer-4-logo"></use>
+                  <use href="./images/icons/sprite.svg#icon-customer-4-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="../images/icons/sprite.svg#icon-customer-5-logo"></use>
+                  <use href="./images/icons/sprite.svg#icon-customer-5-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="../images/icons/sprite.svg#icon-customer-6-logo"></use>
+                  <use href="./images/icons/sprite.svg#icon-customer-6-logo"></use>
                 </svg>
               </a>
             </li>
