--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="../images/icons/sprite.svg#icon-customer-1-logo"></use>
+                  <use href="./images/icons/sprite.svg#icon-customer-1-logo"></use>
                 </svg>
               </a>
             </li>
