--- a/portfolio.html
+++ b/portfolio.html
@@ -76,13 +76,13 @@
 
           <ul class="project-cards list">
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-1.jpg" width="360" height="300" alt="Banking App Interface Concept" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Banking App Interface Concept</h2>
@@ -91,13 +91,13 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-2.jpg" width="360" height="300" alt="Cashless Payment" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Cashless Payment</h2>
@@ -106,13 +106,13 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-3.jpg" width="360" height="300" alt="Meditation App" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Meditation App</h2>
@@ -121,13 +121,13 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-4.jpg" width="360" height="300" alt="Taxi Service" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Taxi Service</h2>
@@ -136,13 +136,13 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-5.jpg" width="360" height="300" alt="Screen Illustrations" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Screen Illustrations</h2>
@@ -151,13 +151,13 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-6.jpg" width="360" height="300" alt="Online Courses" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Online Courses</h2>
@@ -166,13 +166,13 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-7.jpg" width="360" height="300" alt="Instagram Stories Concept" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Instagram Stories Concept</h2>
@@ -181,13 +181,13 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-8.jpg" width="360" height="300" alt="Organic Food" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Organic Food</h2>
@@ -196,13 +196,13 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a class="link" href="./portfolio.html">
+              <a class="project-cards-item-link link" href="./portfolio.html">
                 <div class="project-cards-image-box">
                   <img src="./images/projects/img-9.jpg" width="360" height="300" alt="Fresh Coffee" />
-                  <div class="project-overlay">
+                  <p class="project-overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
                     Fruit Ecommerce App · Cloud Storage App
-                  </div>
+                  </p>
                 </div>
                 <div class="project-info">
                   <h2 class="project-header">Fresh Coffee</h2>
@@ -226,34 +226,34 @@
         </div>
 
         <div class="footer-socials">
-          <h2 class="footer-socials-header">Social media</h2>
+          <p class="footer-socials-title">Social media</p>
 
           <ul class="footer-socials-list list">
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link link">
                 <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link link">
                 <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link link">
                 <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link link">
                 <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
