--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <li class="feature-item">
               <div class="feature-item-image">
                 <svg width="64" height="64" class="feature-item-icon">
-                  <use href="./images/icons/sprite.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-item-header">Strategy</h3>
@@ -77,7 +77,7 @@
             <li class="feature-item">
               <div class="feature-item-image">
                 <svg width="64" height="64" class="feature-item-icon">
-                  <use href="./images/icons/sprite.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-item-header">Punctuality</h3>
@@ -88,7 +88,7 @@
             <li class="feature-item">
               <div class="feature-item-image">
                 <svg width="64" height="64" class="feature-item-icon">
-                  <use href="./images/icons/sprite.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-item-header">Diligence</h3>
@@ -99,7 +99,7 @@
             <li class="feature-item">
               <div class="feature-item-image">
                 <svg width="64" height="64" class="feature-item-icon">
-                  <use href="./images/icons/sprite.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-item-header">Technologies</h3>
@@ -139,28 +139,36 @@
               <div class="list-team-item-info">
                 <h3 class="team-list-item-header">Mark Guerrero</h3>
                 <p class="team-list-item-description">Product Designer</p>
-                <div class="team-list-item-socials">
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="team-list-item-socials list">
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -168,28 +176,36 @@
               <div class="list-team-item-info">
                 <h3 class="team-list-item-header">Tom Ford</h3>
                 <p class="team-list-item-description">Frontend Developer</p>
-                <div class="team-list-item-socials">
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="team-list-item-socials list">
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -197,28 +213,36 @@
               <div class="list-team-item-info">
                 <h3 class="team-list-item-header">Camila Garcia</h3>
                 <p class="team-list-item-description">Marketing</p>
-                <div class="team-list-item-socials">
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="team-list-item-socials list">
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-list-item">
@@ -226,28 +250,36 @@
               <div class="list-team-item-info">
                 <h3 class="team-list-item-header">Daniel Wilson</h3>
                 <p class="team-list-item-description">UI Designer</p>
-                <div class="team-list-item-socials">
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                  <a href="#" class="team-list-item-social-link link">
-                    <svg width="16" height="16" class="team-list-item-social-icon">
-                      <use href="./images/icons/sprite.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </div>
+                <ul class="team-list-item-socials list">
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-list-item-social-item">
+                    <a href="#" class="team-list-item-social-link link">
+                      <svg width="16" height="16" class="team-list-item-social-icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -262,42 +294,42 @@
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="./images/icons/sprite.svg#icon-customer-1-logo"></use>
+                  <use href="./images/icons.svg#icon-customer-1-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="./images/icons/sprite.svg#icon-customer-2-logo"></use>
+                  <use href="./images/icons.svg#icon-customer-2-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="./images/icons/sprite.svg#icon-customer-3-logo"></use>
+                  <use href="./images/icons.svg#icon-customer-3-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="./images/icons/sprite.svg#icon-customer-4-logo"></use>
+                  <use href="./images/icons.svg#icon-customer-4-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="./images/icons/sprite.svg#icon-customer-5-logo"></use>
+                  <use href="./images/icons.svg#icon-customer-5-logo"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a href="#" class="customers-list-item-link">
                 <svg class="customers-list-item-icon" width="104" height="56">
-                  <use href="./images/icons/sprite.svg#icon-customer-6-logo"></use>
+                  <use href="./images/icons.svg#icon-customer-6-logo"></use>
                 </svg>
               </a>
             </li>
@@ -317,34 +349,34 @@
         </div>
 
         <div class="footer-socials">
-          <h2 class="footer-socials-header">Social media</h2>
+          <p class="footer-socials-title">Social media</p>
 
           <ul class="footer-socials-list list">
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link link">
                 <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons/sprite.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link link">
                 <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons/sprite.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link link">
                 <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons/sprite.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-socials-item">
               <a href="" class="footer-socials-link link">
                 <svg width="24" height="24" class="footer-socials-icon">
-                  <use href="./images/icons/sprite.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -355,9 +387,9 @@
 
     <div class="modal-overlay is-hidden" data-modal>
       <div class="modal-window">
-        <button data-modal-close class="modal-close-button">
+        <button type="button" data-modal-close class="modal-close-button">
           <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons/sprite.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
